objects/Approval_Product_Classification_Item__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Product_Classification__c</fullName>
        <label>Approval Product Classification</label>
        <referenceTo>Approval_Product_Classification__c</referenceTo>
        <relationshipLabel>Approval Product Classification Items</relationshipLabel>
        <relationshipName>Approval_Product_Classification_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Mix__c</fullName>
        <label>Solution Mix</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Approval Product Classification Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ClassificationItem-{00000}</displayFormat>
        <label>Approval Product Classification Item Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Product Classification Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>